# HW13_2

./: pyproject.toml
homework10/: db.sqlite3  manage.py
homework10/homework10/: asgi.py  settings.py  urls.py  wsgi.py
homework10/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
homework10/quotes/migrations/: 0001_initial.py  0002_remove_quotes_author_quotes_author.py  0003_remove_quotes_author_quotes_author.py  0004_quotes_user_tag_user_tag_tag_of_username.py
homework10/quotes/static/quotes/: style.css
homework10/quotes/templates/quotes/: add_author.html  author_info.html  base.html  index.html  note.html  tag.html
homework10/users/: forms.py  views.py
homework10/users/migrations/: 0001_initial.py
homework10/users/templates/users/: login.html  signup.html
homework10/utils/: migra.py
