[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pymongo = "^4.7.0"
mongoengine = "^0.28.2"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
